--- a/vignettes/a_04_event_models.Rmd
+++ b/vignettes/a_04_event_models.Rmd
@@ -342,10 +342,10 @@ print(emodel_trialwise)
 # Columns: trialwise_trial.1, trialwise_trial.2, ...
 
 # Plotting trialwise models can be very dense!
-# It generates one condition per trial.
-plot(emodel_trialwise)
+# It generates one condition per trial. Use label_mode/compactness controls.
+plot(emodel_trialwise, label_mode = "none")
 if (interactive()) {
-  plotly::ggplotly(plot(emodel_trialwise)) # Use plotly to explore interactively
+  plotly::ggplotly(plot(emodel_trialwise, label_mode = "compact")) # Use plotly to explore interactively
 }
 ```
 
