--- a/vignettes/a_05_contrasts.Rmd
+++ b/vignettes/a_05_contrasts.Rmd
@@ -65,7 +65,10 @@ contrast_weights(emodel_with_contrast)
 Validate all attached contrasts for a model in one call:
 
 ```{r validate_attached_contrasts}
-validate_contrasts(emodel_with_contrast)
+res <- validate_contrasts(emodel_with_contrast)
+# 'full_rank' is only meaningful for F-contrasts; drop it when all are t-contrasts
+if (!any(res$type == "F")) res$full_rank <- NULL
+res
 ```
 
 ## Advanced Contrast Specifications
