--- a/.albersdown.bak/a_05_contrasts.Rmd
+++ b/.albersdown.bak/a_05_contrasts.Rmd
@@ -1,26 +1,19 @@
 ---
-title: Contrasts in fmridesign
-description: Guide to defining and using contrasts for hypothesis testing in fMRI
-  designs.
+title: "Contrasts in fmridesign"
+description: "Guide to defining and using contrasts for hypothesis testing in fMRI designs."
 output:
   rmarkdown::html_vignette:
-    toc: yes
+    toc: true
     toc_depth: 2
 params:
-  family: red
+  family: "red"
   base_size: 13
   content_width: 80
-vignette: |
-  %\VignetteIndexEntry{Contrasts in fmridesign} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
+vignette: >
+  %\VignetteIndexEntry{Contrasts in fmridesign}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 css: albers.css
-resource_files:
-- albers.css
-- albers.js
-includes:
-  in_header: |-
-    <script src="albers.js"></script>
-    <script>document.addEventListener('DOMContentLoaded',()=>document.body.classList.add('palette-red'));</script>
-
 ---
 
 ```{r setup, include=FALSE}
@@ -34,7 +27,7 @@ suppressPackageStartupMessages({
   library(ggplot2)
 })
 if (requireNamespace("albersdown", quietly = TRUE)) {
-  ggplot2::theme_set(albersdown::theme_albers("red", base_size = params$base_size))
+  theme_set(albersdown::theme_albers("red", base_size = params$base_size))
 }
 ```
 
@@ -123,7 +116,7 @@ names(contrasts_list)
 
 ### Polynomial Contrasts
 
-Test for linear, quadratic, or higher‑order trends across ordered conditions. Note: `poly_contrast()` with `degree = k` returns an F‑contrast matrix with k orthogonal columns (linear, quadratic, …, k‑th), so you usually only need a single call rather than separate one‑by‑one contrasts.
+Test for linear, quadratic, or higher-order trends across ordered conditions:
 
 ```{r polynomial_contrasts}
 # Parametric design with 4 levels
@@ -131,11 +124,13 @@ set.seed(789)
 intensity_levels <- rep(1:4, each = 12)
 onsets_param <- sort(runif(48, 0, 350))
 
-# Create a single polynomial contrast up to cubic (3 columns: linear/quadratic/cubic)
+# Create polynomial contrasts using poly_contrast()
 emodel_polynomial <- event_model(
-  onset ~ hrf(intensity,
+  onset ~ hrf(intensity, 
               contrasts = list(
-                poly_trend = poly_contrast(~ intensity, name = "poly_trend", degree = 3)
+                linear = poly_contrast(~ intensity, name = "linear", degree = 1),
+                quadratic = poly_contrast(~ intensity, name = "quadratic", degree = 2),
+                cubic = poly_contrast(~ intensity, name = "cubic", degree = 3)
               )),
   data = data.frame(
     onset = onsets_param,
@@ -146,15 +141,9 @@ emodel_polynomial <- event_model(
   sampling_frame = sframe
 )
 
-# Extract polynomial contrast weights (3 columns = linear, quadratic, cubic)
+# Extract polynomial contrast weights
 poly_contrasts <- contrast_weights(emodel_polynomial)
-names(poly_contrasts)
-pc <- poly_contrasts[[1]]
-round(head(pc$weights, 6), 3)
-
-# If you want a specific component, select a column (e.g., linear = column 1)
-linear_weights <- pc$weights[, 1, drop = FALSE]
-head(linear_weights)
+lapply(poly_contrasts, function(x) round(x$weights, 3))
 ```
 
 ## Factorial Design Contrasts
@@ -191,9 +180,9 @@ interaction_contrasts <- contrast_weights(emodel_factorial)
 lapply(interaction_contrasts, function(x) round(x$weights, 3))
 ```
 
-## Parametric Modulators: Do You Need a Contrast?
+## Contrasts with Parametric Modulators
 
-For a simple parametric modulator (e.g., `hrf(RT)` with a single‑basis HRF), the effect is captured by a single regressor. In standard GLM software, the t‑test on that coefficient directly tests the parametric effect—no explicit contrast is required. Contrasts are useful if you need to combine multiple columns (e.g., multi‑basis HRF, or a set of RT‑by‑condition regressors) into a single hypothesis.
+When using parametric modulators, contrasts can test both categorical and continuous effects:
 
 ```{r parametric_contrasts}
 # Design with conditions and RT modulation
@@ -204,8 +193,8 @@ pm_onsets <- sort(runif(n_events, 0, 350))
 pm_RT <- rnorm(n_events, mean = ifelse(pm_conditions == "congruent", 0.5, 0.7), sd = 0.1)
 
 emodel_parametric <- event_model(
-  onset ~ hrf(condition,
-              contrasts = pair_contrast(~ condition == "incongruent", ~ condition == "congruent", name = "incongruent_gt_congruent")) +
+  onset ~ hrf(condition, 
+              contrasts = pair_contrast(~ condition == "incongruent", ~ condition == "congruent", name = "incongruent_gt_congruent")) + 
           hrf(RT),
   data = data.frame(
     onset = pm_onsets,
@@ -217,12 +206,9 @@ emodel_parametric <- event_model(
   sampling_frame = sframe
 )
 
-# Categorical contrast (condition) is attached; the RT parametric term is a single regressor.
-# Identify its column(s) for reporting; the model t‑stat on this column tests the parametric effect.
-dm <- design_matrix(emodel_parametric)
-idx <- term_indices(dm)
-idx[["RT"]]
-colnames(dm)[idx[["RT"]]]
+# Get contrasts - includes both categorical and parametric terms
+param_contrasts <- contrast_weights(emodel_parametric)
+print(param_contrasts)
 ```
 
 ## F-contrasts for Omnibus Tests
@@ -352,11 +338,59 @@ print(scaled_contrast)
 print(sum(scaled_contrast))  # Should be ~0
 ```
 
-<!-- Section on multiple-comparison correction removed: not standard within-model in typical fMRI GLM workflows. Downstream group analysis packages handle control of false positives across space/contrasts. -->
+### 3. Multiple Comparison Correction
 
-<!-- Section on downstream statistical fitting removed to keep the vignette focused on
-     building and validating contrasts. GLM fitting and inference vary by toolbox and
-     are typically handled outside fmridesign. -->
+When testing multiple contrasts, consider correction for multiple comparisons:
+
+```{r multiple_contrasts}
+# Design with multiple planned contrasts
+emodel_multiple <- event_model(
+  onset ~ hrf(condition,
+              contrasts = contrast_set(
+                pair_contrast(~ condition == "C1", ~ condition == "C2", name = "C1_vs_C2"),
+                pair_contrast(~ condition == "C1", ~ condition == "C3", name = "C1_vs_C3"),
+                pair_contrast(~ condition == "C2", ~ condition == "C3", name = "C2_vs_C3")
+              )),
+  data = data.frame(
+    onset = sort(runif(60, 0, 350)),
+    condition = factor(rep(c("C1", "C2", "C3"), 20)),
+    block = factor(rep(1, 60))
+  ),
+  block = ~ block,
+  sampling_frame = sframe
+)
+
+# Number of contrasts to correct for
+n_contrasts <- length(contrast_weights(emodel_multiple))
+bonferroni_alpha <- 0.05 / n_contrasts
+print(paste("Bonferroni-corrected alpha:", bonferroni_alpha))
+```
+
+## Integration with Statistical Analysis
+
+Once contrasts are defined, they can be used in the statistical analysis:
+
+```{r analysis_integration, eval=FALSE}
+# Assuming you have:
+# - Y: fMRI time series data
+# - X: design matrix from event_model
+# - C: contrast vector
+
+# Standard GLM analysis
+# fit <- lm(Y ~ X - 1)
+# beta <- coef(fit)
+# contrast_estimate <- t(C) %*% beta
+# contrast_se <- sqrt(t(C) %*% vcov(fit) %*% C)
+# t_stat <- contrast_estimate / contrast_se
+
+# Using the fmridesign contrast
+design_mat <- design_matrix(emodel_with_contrast)
+contrasts <- contrast_weights(emodel_with_contrast)
+
+# Apply contrast to parameter estimates
+# contrast_result <- apply_contrast(fit, contrasts[[1]])
+```
+
 ## Advanced Topics
 
 ### Custom Contrast Functions
@@ -427,12 +461,13 @@ if (!cc$ok) cc$pairs
 ## Summary
 
 Define contrasts inline, extract weights cleanly, and validate before analysis. Use t-contrasts for directional tests and F-contrasts for omnibus effects.
- - Complex designs: handle factorial, parametric, and multi‑run contrasts
- - Validation tools: ensure contrasts are properly specified and estimable
+3. **Complex designs**: Handle factorial, parametric, and multi-run contrasts
+4. **Validation tools**: Ensure contrasts are properly specified and estimable
 
 Remember to:
 - Plan contrasts based on your hypotheses
 - Validate contrast properties before analysis
+- Consider multiple comparison corrections
 - Document your contrast specifications for reproducibility
 
 For more information on event and baseline models, see:
